@@ -1,3 +1,8 @@
+2011-07-07 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-60
+	* "Deep Import" considers out of order items.
+	* Fixes some minor errors regarding to "Deep Import". 
+
 2011-07-05 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-59
 	* Big Fix: Update EventContents when renaming and creating Streams. bug 83721
